--- a/manage/.gitignore
+++ b/manage/.gitignore
@@ -1,7 +1,5 @@
 
 # Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
-mypython/*
-beanstalk/*
+
+mypython/
+beanstalk/
