--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -3,12 +3,15 @@ branch-defaults:
     environment: test-dev
   dev-test:
     environment: test-dev
+  main:
+    environment: null
 environment-defaults:
   test-dev:
     branch: null
     repository: null
 global:
   application_name: manage-tenants
+  branch: null
   default_ec2_keyname: null
   default_platform: Python 3.11 running on 64bit Amazon Linux 2023
   default_region: us-east-2
@@ -17,5 +20,6 @@ global:
   platform_name: null
   platform_version: null
   profile: null
+  repository: null
   sc: git
   workspace_type: Application
