--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,8 +1,8 @@
 branch-defaults:
   default:
-    environment: test-dev
+    environment: budgeting-env
   dev-test:
-    environment: test-dev
+    environment: budgeting-env
   main:
     environment: null
 environment-defaults:
@@ -10,16 +10,16 @@ environment-defaults:
     branch: null
     repository: null
 global:
-  application_name: manage-tenants
+  application_name: budgeting
   branch: null
   default_ec2_keyname: null
   default_platform: Python 3.11 running on 64bit Amazon Linux 2023
-  default_region: us-east-2
+  default_region: af-south-1
   include_git_submodules: true
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: null
+  profile: eb-cli
   repository: null
   sc: git
   workspace_type: Application
